internal/controller/testdata/test-02/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default
  namespace: openmcp-system
  annotations:
    dns.openmcp.cloud/base-domain: openmcp.cluster.local
spec:
  gatewayClassName: eg
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: tls
    port: 9443
    protocol: TLS
    tls:
      mode: Passthrough
